--- a/share/boot_config.json
+++ b/share/boot_config.json
@@ -1,96 +1,77 @@
 /* QQVGA = 0, QVGA = 1, VGA =2 */
 {
-  "converters":
-  {
-    "front_camera":
-    {
-      "enabled"       : true,
-      "resolution"    : 1,
-      "fps"           : 10,
-      "recorder_fps"  : 5
+  "converters": {
+    "front_camera": {
+      "enabled": false,
+      "resolution": 1,
+      "fps": 10,
+      "recorder_fps": 5
     },
-    "bottom_camera":
-    {
-      "enabled"       : true,
-      "resolution"    : 1,
-      "fps"           : 10,
-      "recorder_fps"  : 5
+    "bottom_camera": {
+      "enabled": false,
+      "resolution": 1,
+      "fps": 10,
+      "recorder_fps": 5
     },
-    "depth_camera":
-    {
-      "enabled"       : true,
-      "resolution"    : 1,
-      "fps"           : 10,
-      "recorder_fps"  : 5
+    "depth_camera": {
+      "enabled": false,
+      "resolution": 1,
+      "fps": 10,
+      "recorder_fps": 5
     },
-    "ir_camera":
-    {
-      "enabled"       : true,
-      "resolution"    : 1,
-      "fps"           : 10,
-      "recorder_fps"  : 5
+    "ir_camera": {
+      "enabled": false,
+      "resolution": 1,
+      "fps": 10,
+      "recorder_fps": 5
     },
-    "info":
-    {
-      "enabled"       : true,
-      "frequency"     : 1
+    "info": {
+      "enabled": false,
+      "frequency": 1
     },
-    "logs":
-    {
-      "enabled"       : true,
-      "frequency"     : 1
+    "logs": {
+      "enabled": false,
+      "frequency": 1
     },
-    "diag":
-    {
-      "enabled"       : true,
-      "frequency"     : 1
+    "diag": {
+      "enabled": false,
+      "frequency": 1
     },
-    "imu_torso":
-    {
-      "enabled"       : true,
-      "frequency"     : 10
+    "imu_torso": {
+      "enabled": false,
+      "frequency": 10
     },
-    "imu_base":
-    {
-      "enabled"       : true,
-      "frequency"     : 10
+    "imu_base": {
+      "enabled": false,
+      "frequency": 10
     },
-    "joint_states":
-    {
-      "enabled"       : true,
-      "frequency"     : 50
+    "joint_states": {
+      "enabled": true,
+      "frequency": 20
     },
-    "laser":
-    {
-      "enabled"       : true,
-      "frequency"     : 10
+    "laser": {
+      "enabled": false,
+      "frequency": 10
     },
-    "sonar":
-    {
-      "enabled"       : true,
-      "frequency"     : 10
+    "sonar": {
+      "enabled": false,
+      "frequency": 10
     },
-    "audio":
-    {
-      "enabled"       : true
+    "audio": {
+      "enabled": false
     },
-    "bumper":
-    {
-      "enabled"       : true
+    "bumper": {
+      "enabled": false
     },
-    "touch_hand":
-    {
-      "enabled"       : true
+    "touch_hand": {
+      "enabled": false
     },
-    "touch_head":
-    {
-      "enabled"       : true
+    "touch_head": {
+      "enabled": false
     },
-    "odom":
-    {
-      "enabled"       : true,
-      "frequency"     : 15
+    "odom": {
+      "enabled": true,
+      "frequency": 10
     }
   }
 }
-
